[package]
name = "boost"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.15.1"
bitvec = "1.0.1"
matrix-sdk = "0.8.0"
rand = "0.8.5"
regex = "1.10.6"
x25519-dalek = "2.0.1"
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
anyhow = "1.0.95"
futures = { version = "0.3.31", features = ["executor"] }
env_logger = "0.11.8"
log = "0.4.29"
hkdf = "0.12.4"
sha2 = "0.10.9"
chacha20 = "0.10.0"
